--- a/index.html
+++ b/index.html
@@ -1,6 +1,89 @@
+<!DOCTYPE html>
 <html>
-	<body>
-		<h1>Hello world</h1>
-		<p> i m muks</p>
-	</body>
+<head>
+	<style type="text/css">
+		table{
+			border-collapse: : collapse;
+			width: 100%;
+		}
+		tr{
+			border: 1px solid black;
+			text-align: left;
+			padding: 5px;
+		}
+		th{
+			border: 1px solid black;
+			text-align: left;
+			padding: 10px;
+		}
+
+	</style>
+	<title></title>
+</head>
+<body>
+	<table>
+		<tr>
+			<th>Title</th>
+			<th>Demo</th>
+			<th>Code</th>
+		</tr>
+		<tr>
+			<th>Github Assignment</th>
+			<th> </th>
+			<th></th>
+		</tr>
+		<tr>
+			<th>Design Assignment 1</th>
+			<th></th>
+			<th></th>
+		</tr>
+		<tr>
+			<th>Design Assignment 2</th>
+			<th></th>
+			<th></th>
+		</tr>
+		<tr>
+			<th>Design Final Project</th>
+			<th></th>
+			<th></th>
+		</tr>
+		<tr>
+			<th>JS Assignment 1</th>
+			<th></th>
+			<th></th>
+		</tr>
+		<tr>
+			<th>JS Assignment 2</th>
+			<th></th>
+			<th></th>
+		</tr>
+		<tr>
+			<th>JS Assignment 3</th>
+			<th></th>
+			<th></th>
+		</tr>
+		<tr>
+			<th>JS Assignment 4</th>
+			<th></th>
+			<th></th>
+		</tr>
+		<tr>
+			<th>JS Assignment 5</th>
+			<th></th>
+			<th></th>
+		</tr>
+		<tr>
+			<th>JS Assignment 6</th>
+			<th></th>
+			<th></th>
+		</tr>
+		<tr>
+			<th>JS Final Project</th>
+			<th></th>
+			<th></th>
+		</tr>
+	</table>
+	
+	
+</body>
 </html>
