--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 		</tr>
 		<tr>
 			<th>Github Assignment</th>
-			<th> https://muksmhzrn.github.io/leapfrog/</th>
-			<th>https://github.com/muksmhzrn/leapfrog.git</th>
+			<th><a href="https://muksmhzrn.github.io/leapfrog/"> https://muksmhzrn.github.io/leapfrog/</a></th>
+			<th><a href="https://github.com/muksmhzrn/leapfrog.git"> https://github.com/muksmhzrn/leapfrog.git</a></th>
 		</tr>
 		<tr>
 			<th>Design Assignment 1</th>
