assignment 1st changes donr

--- a/index.html
+++ b/index.html
@@ -29,57 +29,57 @@
 		<tr>
 			<th>Github Assignment</th>
 			<th><a href="https://muksmhzrn.github.io/leapfrog/"> https://muksmhzrn.github.io/leapfrog/</a></th>
-			<th><a href="https://github.com/muksmhzrn/leapfrog.git"> https://github.com/muksmhzrn/leapfrog.git</a></th>
+			<th><a href="https://github.com/muksmhzrn/leapfrog.git"> https://github.com/muksmhzrn/leapfrog.git</a> </th>
 		</tr>
 		<tr>
 			<th>Design Assignment 1</th>
-			<th></th>
-			<th></th>
+			<th><a href="#"></a></th>
+			<th><a href="#"></a></th>
 		</tr>
 		<tr>
 			<th>Design Assignment 2</th>
-			<th></th>
-			<th></th>
+			<th><a href="#"></a></th>
+			<th><a href="#"></a></th>
 		</tr>
 		<tr>
 			<th>Design Final Project</th>
-			<th></th>
-			<th></th>
+			<th><a href="#"></a></th>
+			<th><a href="#"></a></th>
 		</tr>
 		<tr>
 			<th>JS Assignment 1</th>
-			<th></th>
-			<th></th>
+			<th><a href="#"></a></th>
+			<th><a href="#"></a></th>
 		</tr>
 		<tr>
 			<th>JS Assignment 2</th>
-			<th></th>
-			<th></th>
+			<th><a href="#"></a></th>
+			<th><a href="#"></a></th>
 		</tr>
 		<tr>
 			<th>JS Assignment 3</th>
-			<th></th>
-			<th></th>
+			<th><a href="#"></a></th>
+			<th><a href="#"></a></th>
 		</tr>
 		<tr>
 			<th>JS Assignment 4</th>
-			<th></th>
-			<th></th>
+			<th><a href="#"></a></th>
+			<th><a href="#"></a></th>
 		</tr>
 		<tr>
 			<th>JS Assignment 5</th>
-			<th></th>
-			<th></th>
+			<th><a href="#"></a></th>
+			<th><a href="#"></a></th>
 		</tr>
 		<tr>
 			<th>JS Assignment 6</th>
-			<th></th>
-			<th></th>
+			<th><a href="#"></a></th>
+			<th><a href="#"></a></th>
 		</tr>
 		<tr>
 			<th>JS Final Project</th>
-			<th></th>
-			<th></th>
+			<th><a href="#"></a></th>
+			<th><a href="#"></a></th>
 		</tr>
 	</table>
 	
