--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</tr>
 		<tr>
 			<th>Design Assignment 1</th>
-			<th><a href="#"></a></th>
+			<th><a href="folder/text.html"></a></th>
 			<th><a href="#"></a></th>
 		</tr>
 		<tr>
