--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 		</tr>
 		<tr>
 			<th>Design Assignment 1</th>
-			<th><a href="folder/text.html"></a></th>
-			<th><a href="#"></a></th>
+			<th><a href="https://muksmhzrn.github.io/leapfrog/DesignAssignment/">https://muksmhzrn.github.io/leapfrog/DesignAssignment/</a></th>
+			<th><a href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment">https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment</a></th>
 		</tr>
 		<tr>
 			<th>Design Assignment 2</th>
