--- a/DesignAssignment/index.html
+++ b/DesignAssignment/index.html
@@ -86,7 +86,7 @@
                     <div class="first-col3-right-container">
                         <div class="first-col2-left-container">
                             <div class="first-col-2-left-text">
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, nulla libero assumenda error repellat amet, nam voluptates doloribus vel optio ab autem fugit sequi consequatur earum, quia veniam quibusdam officiis?</p>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <span> nulla</span>, nulla libero assumenda error repellat amet, nam voluptates doloribus vel optio ab autem fugit sequi consequatur earum, quia veniam quibusdam officiis?</p>
                             </div>
                             <div class="first-col-2-right-img">
                                 <ul>
@@ -108,7 +108,7 @@
 
                         </div>
                     </div>
-                    <div class="second-col"><s>OUR TEAM div</s></div>
+                    <div class="second-col"></div>
                     <div class="third-col">
                         <div class="third-main-heading">
                             <h1>Best solution is simplest idea.</h1>
