--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 		</tr>
 		<tr>
 			<th>Design Assignment 2</th>
-			<th><a href="#"></a></th>
-			<th><a href="#"></a></th>
+			<th><a href="https://muksmhzrn.github.io/leapfrog/DesignAssignment2/"></a></th>
+			<th><a href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment2"></a></th>
 		</tr>
 		<tr>
 			<th>Design Final Project</th>
