--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
 			<th>Code</th>
 		</tr>
 		<tr>
-			<th>Github Assignment</th>
+			<th>Github Assignment :  Hosted Assignments index Page </th>
 			<th><a href="https://muksmhzrn.github.io/leapfrog/"> https://muksmhzrn.github.io/leapfrog/</a></th>
 			<th><a href="https://github.com/muksmhzrn/leapfrog.git"> https://github.com/muksmhzrn/leapfrog.git</a> </th>
 		</tr>
 		<tr>
-			<th>Design Assignment 1</th>
+			<th>Design Assignment 1 :1A-home-search.jpg</th> 
 			<th><a href="https://muksmhzrn.github.io/leapfrog/DesignAssignment/">https://muksmhzrn.github.io/leapfrog/DesignAssignment/</a></th>
 			<th><a href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment">https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment</a></th>
 		</tr>
 		<tr>
-			<th>Design Assignment 2</th>
-			<th><a href="https://muksmhzrn.github.io/leapfrog/DesignAssignment2/"></a></th>
-			<th><a href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment2"></a></th>
+			<th>Design Assignment 2 :1A-settings.jpg </th>
+			<th><a href="https://muksmhzrn.github.io/leapfrog/DesignAssignment2/">https://muksmhzrn.github.io/leapfrog/DesignAssignment2/</a></th>
+			<th><a href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment2"></a>https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment2</th> 
 		</tr>
 		<tr>
 			<th>Design Final Project</th>
@@ -47,32 +47,32 @@
 			<th><a href="#"></a></th>
 		</tr>
 		<tr>
-			<th>JS Assignment 1</th>
+			<th>JS Assignment 1:Image Slider</th>
 			<th><a href="#"></a></th>
 			<th><a href="#"></a></th>
 		</tr>
 		<tr>
-			<th>JS Assignment 2</th>
+			<th>JS Assignment 2 :Image Slider with hold times</th> 
 			<th><a href="#"></a></th>
 			<th><a href="#"></a></th>
 		</tr>
 		<tr>
-			<th>JS Assignment 3</th>
+			<th>JS Assignment 3 :Box Collision and Ant Smasher</th>
 			<th><a href="#"></a></th>
 			<th><a href="#"></a></th>
 		</tr>
 		<tr>
-			<th>JS Assignment 4</th>
+			<th>JS Assignment 4 :Car Lane Game with Bullet implementation </th>
 			<th><a href="#"></a></th>
 			<th><a href="#"></a></th>
 		</tr>
 		<tr>
-			<th>JS Assignment 5</th>
+			<th>JS Assignment 5 :Flappy Bird</th>
 			<th><a href="#"></a></th>
 			<th><a href="#"></a></th>
 		</tr>
 		<tr>
-			<th>JS Assignment 6</th>
+			<th>JS Assignment 6 :Helix Animatio </th>
 			<th><a href="#"></a></th>
 			<th><a href="#"></a></th>
 		</tr>
