--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<tr>
 			<th>Design Assignment 2 :1A-settings.jpg </th>
 			<th><a href="https://muksmhzrn.github.io/leapfrog/DesignAssignment2/">https://muksmhzrn.github.io/leapfrog/DesignAssignment2/</a></th>
-			<th><a href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment2"></a>https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment2</th> 
+			<th><a href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment2">https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment2</a></th> 
 		</tr>
 		<tr>
 			<th>Design Final Project</th>
