--- a/index.html
+++ b/index.html
@@ -1,88 +1,128 @@
 <html>
-<head>
-	<style type="text/css">
-		table{
-			border-collapse: : collapse;
-			width: 100%;
-		}
-		tr{
-			border: 1px solid black;
-			text-align: left;
-			padding: 5px;
-		}
-		th{
-			border: 1px solid black;
-			text-align: left;
-			padding: 10px;
-		}
 
-	</style>
-	<title></title>
+<head>
+    <style type="text/css">
+        table {
+            border-collapse: : collapse;
+            width: 100%;
+        }
+        
+        tr {
+            border: 1px solid black;
+            text-align: left;
+            padding: 5px;
+        }
+        
+        th {
+            border: 1px solid black;
+            text-align: left;
+            padding: 10px;
+        }
+    </style>
+    <title></title>
 </head>
+
 <body>
-	<table>
-		<tr>
-			<th>Title</th>
-			<th>Demo</th>
-			<th>Code</th>
-		</tr>
-		<tr>
-			<th>Github Assignment :  Hosted Assignments index Page </th>
-			<th><a href="https://muksmhzrn.github.io/leapfrog/"> https://muksmhzrn.github.io/leapfrog/</a></th>
-			<th><a href="https://github.com/muksmhzrn/leapfrog.git"> https://github.com/muksmhzrn/leapfrog.git</a> </th>
-		</tr>
-		<tr>
-			<th>Design Assignment 1 :1A-home-search.jpg</th> 
-			<th><a href="https://muksmhzrn.github.io/leapfrog/DesignAssignment/">https://muksmhzrn.github.io/leapfrog/DesignAssignment/</a></th>
-			<th><a href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment">https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment</a></th>
-		</tr>
-		<tr>
-			<th>Design Assignment 2 :1A-settings.jpg </th>
-			<th><a href="https://muksmhzrn.github.io/leapfrog/DesignAssignment2/">https://muksmhzrn.github.io/leapfrog/DesignAssignment2/</a></th>
-			<th><a href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment2">https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment2</a></th> 
-		</tr>
-		<tr>
-			<th>Design Final Project</th>
-			<th><a href="#"></a></th>
-			<th><a href="#"></a></th>
-		</tr>
-		<tr>
-			<th>JS Assignment 1:Image Slider</th>
-			<th><a href="#"></a></th>
-			<th><a href="#"></a></th>
-		</tr>
-		<tr>
-			<th>JS Assignment 2 :Image Slider with hold times</th> 
-			<th><a href="#"></a></th>
-			<th><a href="#"></a></th>
-		</tr>
-		<tr>
-			<th>JS Assignment 3 :Box Collision and Ant Smasher</th>
-			<th><a href="#"></a></th>
-			<th><a href="#"></a></th>
-		</tr>
-		<tr>
-			<th>JS Assignment 4 :Car Lane Game with Bullet implementation </th>
-			<th><a href="#"></a></th>
-			<th><a href="#"></a></th>
-		</tr>
-		<tr>
-			<th>JS Assignment 5 :Flappy Bird</th>
-			<th><a href="#"></a></th>
-			<th><a href="#"></a></th>
-		</tr>
-		<tr>
-			<th>JS Assignment 6 :Helix Animatio </th>
-			<th><a href="#"></a></th>
-			<th><a href="#"></a></th>
-		</tr>
-		<tr>
-			<th>JS Final Project</th>
-			<th><a href="#"></a></th>
-			<th><a href="#"></a></th>
-		</tr>
-	</table>
-	
-	
+    <div class="name">
+        <h2>Mukesh Maharjan</h2>
+        <h3>Group (I) </h3>
+    </div>
+    <table>
+        <tr>
+            <th>Title</th>
+            <th>Demo</th>
+            <th>Code</th>
+        </tr>
+        <tr>
+            <th>Github Assignment : Hosted Assignments index Page </th>
+            <th><a href="https://muksmhzrn.github.io/leapfrog/"> https://muksmhzrn.github.io/leapfrog/</a></th>
+            <th><a href="https://github.com/muksmhzrn/leapfrog.git"> https://github.com/muksmhzrn/leapfrog.git</a> </th>
+        </tr>
+        <tr>
+            <th>Design Assignment 1 :1A-home-search.jpg</th>
+            <th><a href="https://muksmhzrn.github.io/leapfrog/DesignAssignment/">https://muksmhzrn.github.io/leapfrog/DesignAssignment/</a></th>
+            <th><a href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment">https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment</a></th>
+        </tr>
+        <tr>
+            <th>Design Assignment 2 :1A-settings.jpg </th>
+            <th><a href="https://muksmhzrn.github.io/leapfrog/DesignAssignment2/">https://muksmhzrn.github.io/leapfrog/DesignAssignment2/</a></th>
+            <th><a href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment2">https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment2</a></th>
+        </tr>
+        <tr>
+            <th>Design Final Project static</th>
+            <th><a href="https://muksmhzrn.github.io/leapfrog/DesignAssignmentFinalStatic/">https://muksmhzrn.github.io/leapfrog/DesignAssignmentFinalStatic/</a></th>
+            <th><a href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignmentFinalStatic">https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignmentFinalStatic</a></th>
+        </tr>
+        <tr>
+            <th>Design Final Project responsive</th>
+            <th><a href="https://muksmhzrn.github.io/leapfrog/DesignAssignmentFinalResponsive/">https://muksmhzrn.github.io/leapfrog/DesignAssignmentFinalResponsive/</a></th>
+            <th><a href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignmentFinalResponsive">https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignmentFinalResponsive</a></th>
+        </tr>
+        <tr>
+            <th>JS Assignment 1:Image Slider</th>
+            <th>
+                <a href="#"></a>
+            </th>
+            <th>
+                <a href="#"></a>
+            </th>
+        </tr>
+        <tr>
+            <th>JS Assignment 2 :Image Slider with hold times</th>
+            <th>
+                <a href="#"></a>
+            </th>
+            <th>
+                <a href="#"></a>
+            </th>
+        </tr>
+        <tr>
+            <th>JS Assignment 3 :Box Collision and Ant Smasher</th>
+            <th>
+                <a href="#"></a>
+            </th>
+            <th>
+                <a href="#"></a>
+            </th>
+        </tr>
+        <tr>
+            <th>JS Assignment 4 :Car Lane Game with Bullet implementation </th>
+            <th>
+                <a href="#"></a>
+            </th>
+            <th>
+                <a href="#"></a>
+            </th>
+        </tr>
+        <tr>
+            <th>JS Assignment 5 :Flappy Bird</th>
+            <th>
+                <a href="#"></a>
+            </th>
+            <th>
+                <a href="#"></a>
+            </th>
+        </tr>
+        <tr>
+            <th>JS Assignment 6 :Helix Animatio </th>
+            <th>
+                <a href="#"></a>
+            </th>
+            <th>
+                <a href="#"></a>
+            </th>
+        </tr>
+        <tr>
+            <th>JS Final Project</th>
+            <th>
+                <a href="#"></a>
+            </th>
+            <th>
+                <a href="#"></a>
+            </th>
+        </tr>
+    </table>
+
 </body>
+
 </html>
