--- a/DesignAssignmentFinalStatic/index.html
+++ b/DesignAssignmentFinalStatic/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/layout.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <div class="header-top">
         <div class="container clearfix">
             <figure class="logo">
-                <img src="/images/Logo.png" alt="">
+                <img src="./images/Logo.png" alt="">
             </figure>
             <nav class="navbar">
                 <ul>
@@ -30,7 +30,7 @@
                 </ul>
             </nav>
             <figure class="divider">
-                <img src="" alt="">
+                <img src="./images/Divider.png" alt="">
             </figure>
         </div>
     </div>
@@ -38,7 +38,7 @@
         <div class="container clearfix">
             <div class="header-bottom-left">
                 <div class="logo">
-                    <img src="/images/Logo1.png" alt="">
+                    <img src="./images/Logo1.png" alt="">
                 </div>
                 <div class="heading">
                     <h1><span>MORDEN ASURE TEMPLATE</span>
@@ -46,7 +46,7 @@
                     </h1>
                 </div>
                 <figure class="divider">
-                    <img src="/images/divider_white.png" alt="">
+                    <img src="./images/divider_white.png" alt="">
                 </figure>
                 <p>bsdjkfbkjsfbdsdbsdbllksdcsdkjcbsdbkc
                     sdnjkcnsdklcnsdlkcjnsdkcnsdkjc
@@ -95,13 +95,13 @@
             </div>
             <div class="social-media-icon">
                 <ul>
-                    <li><a href="#"><img src="/images/facebook.png" alt=""></a></li>
-                    <li><a href="#"><img src="/images/twiter.png" alt=""></a></li>
-                    <li><a href="#"><img src="/images/google.png" alt=""></a></li>
-                    <li><a href=""><img src="/images/pintrest.png" alt=""></a></li>
-                    <li><a href="#"><img src="/images/instragram.png" alt=""></a></li>
-                    <li><a href="#"><img src="/images/idk.png" alt=""></a></li>
-                    <li><a href="#"><img src="/images/wifi.png" alt=""></a></li>
+                    <li><a href="#"><img src="./images/facebook.png" alt=""></a></li>
+                    <li><a href="#"><img src="./images/twiter.png" alt=""></a></li>
+                    <li><a href="#"><img src="./images/google.png" alt=""></a></li>
+                    <li><a href=""><img src="./images/pintrest.png" alt=""></a></li>
+                    <li><a href="#"><img src="./images/instragram.png" alt=""></a></li>
+                    <li><a href="#"><img src="./images/idk.png" alt=""></a></li>
+                    <li><a href="#"><img src="./images/wifi.png" alt=""></a></li>
                 </ul>
             </div>
         </div>
@@ -134,7 +134,7 @@
                 </div>
                 <div class="main-block-right">
                     <figure>
-                        <img src="/images/image_right_u255.png" alt="">
+                        <img src="./images/image_right_u255.png" alt="">
                     </figure>
                 </div>
             </div>
@@ -145,14 +145,14 @@
     <section class="sub-list">
         <div class="container clearfix">
             <figure class="sublist-image">
-                <img src="/images/image_left_sub_list_u260.png" alt="">
+                <img src="./images/image_left_sub_list_u260.png" alt="">
             </figure>
             <div class="sub-list-section">
                 <div class="heading">
                     <h1>Sub List Selection</h1>
                 </div>
                 <figure class="divider">
-                    <img src="/images/divider_orange_u7 copy 4.png" alt="">
+                    <img src="./images/divider_orange_u7 copy 4.png" alt="">
                 </figure>
                 <p>bsdjkfbkjsfbdsdbsdbllksdcsdkjcbsdbkc
                     sdnjkcnsdklcnsdlkcjnsdkcnsdkjc
@@ -160,7 +160,7 @@
                 </p>
                 <div class="sub-list-section-title clearfix">
                     <figure class="sub-list-section-title-download-image">
-                        <img src="/images/uploadwithborder.png" alt="">
+                        <img src="./images/uploadwithborder.png" alt="">
                     </figure>
                     <div class="sub-list-section-title-paragraph">
                         <p>bsdjkfbkjsfbdsdbsdbllksdcsdkjcbsdbkc
@@ -171,7 +171,7 @@
                 </div>
                 <div class="sub-list-section-title clearfix">
                     <figure class="sub-list-section-title-download-image">
-                        <img src="/images/uploadwithborder.png" alt="">
+                        <img src="./images/uploadwithborder.png" alt="">
                     </figure>
                     <div class="sub-list-section-title-paragraph">
                         <p>bsdjkfbkjsfbdsdbsdbllksdcsdkjcbsdbkc
@@ -193,7 +193,7 @@
                     <h1>Sub List Selection</h1>
                 </div>
                 <figure class="divider">
-                    <img src="/images/divider_orange_u7 copy 4.png" alt="">
+                    <img src="./images/divider_orange_u7 copy 4.png" alt="">
                 </figure>
                 <p>bsdjkfbkjsfbdsdbsdbllksdcsdkjcbsdbkc
                     sdnjkcnsdklcnsdlkcjnsdkcnsdkjc
@@ -206,7 +206,7 @@
             </div>
             <div class="standard-picture-section-image">
                 <figure>
-                    <img src="/images/image_right_standard_u262.png" alt="">
+                    <img src="./images/image_right_standard_u262.png" alt="">
                 </figure>
             </div>
         </div>
@@ -219,7 +219,7 @@
                     <h1>WHY THIS IS AWESOME</h1>
                 </div>
                 <figure class="divider">
-                    <img src="/images/divider_orange_u7 copy 4.png" alt="">
+                    <img src="./images/divider_orange_u7 copy 4.png" alt="">
                 </figure>
                 <p>bsdjkfbkjsfbdsdbsdbllksdcsdkjcbsdbkc
 
@@ -236,7 +236,7 @@
                             <h1>MORDEN ASURE TEMPLATE</h1>
                         </div>
                         <figure class="divider">
-                            <img src="/images/divider_white.png" alt="">
+                            <img src="./images/divider_white.png" alt="">
                         </figure>
                         <p>bsdjkfbkjsfbdsdbsdbllksdcsdkjcbsdbkc
                             sdnjkcnsdklcnsdlkcjnsdkcnsdkjc
@@ -258,7 +258,7 @@
                     <h1>CONTACT US</h1>
                 </div>
                 <figure class="divider">
-                    <img src="/images/divider_orange_u7 copy 4.png" alt="">
+                    <img src="./images/divider_orange_u7 copy 4.png" alt="">
                 </figure>
                 <p>bsdjkfbkjsfbdsdbsdbllksdcsdkjcbsdb
                 </p>
