--- a/DesignAssignmentFinalStatic/index.html
+++ b/DesignAssignmentFinalStatic/index.html
@@ -9,10 +9,11 @@
       <link rel="stylesheet" href="./css/layout.css">
       <link rel="stylesheet" href="./css/style.css">
       <link href="https://fonts.googleapis.com/css?family=Raleway:300,400&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
    </head>
    <body>
       <header>
-         <section class="header-top">
+         <div class="header-top">
             <div class="container clearfix">
                <figure class="logo">
                   <a href="#"> <img src="./images/Logo.png" alt=""></a>
@@ -27,7 +28,7 @@
                   </ul>
                </nav>
             </div>
-         </section>
+         </div>
          <section class="header-bottom">
             <div class="container clearfix">
                <div class="header-bottom-left">
