--- a/DesignAssignmentFinalResponsive/index.html
+++ b/DesignAssignmentFinalResponsive/index.html
@@ -13,7 +13,7 @@
    </head>
    <body>
       <header>
-         <div class="header-top">
+         <div class="header-top blacks">
             <div class="container clearfix">
                <figure class="logo">
                   <a href="#"> <img src="./images/Logo.png" alt=""></a>
@@ -28,6 +28,7 @@
                   </ul>
                </nav>
             </div>
+           
          </div>
          <section class="header-bottom">
             <div class="container clearfix">
@@ -49,20 +50,22 @@
                      <input type="submit" value="Download">
                   </div>
                </div>
-               <div class="header-bottom-right">
-                  <div class="title">
-                     <h2>TRY YOUR <span>FREE</span> TRAIL</h2>
-                  </div>
-                  <div class="main-form">
-                     <div class="form">
-                        <form action="#">
-                           <input type="text" placeholder="Name">
-                           <input type="email" placeholder="Email">
-                           <input type="password" placeholder="Password">
-                        </form>
+               <div class="container">
+                  <div class="header-bottom-right">
+                     <div class="title">
+                        <h2>TRY YOUR <span>FREE</span> TRAIL</h2>
                      </div>
-                     <div class="button">
-                        <input type="submit" value="Started">
+                     <div class="main-form">
+                        <div class="form">
+                           <form action="#">
+                              <input type="text" placeholder="Name">
+                              <input type="email" placeholder="Email">
+                              <input type="password" placeholder="Password">
+                           </form>
+                        </div>
+                        <div class="button">
+                           <input type="submit" value="Started">
+                        </div>
                      </div>
                   </div>
                </div>
