--- a/DesignAssignmentFinalStatic/index.html
+++ b/DesignAssignmentFinalStatic/index.html
@@ -75,7 +75,7 @@
             <div class="container clearfix">
                <div class="heading">
                   <h2>Social Media</h2>
-                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi cum nam, ratione ad odio fugiat, sit eum perspiciatis labore veniam commodi illum veritatis quod autem expedita natus possimus et quam.
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                   </p>
                </div>
                <div class="social-media-icon">
@@ -140,8 +140,8 @@
                         <a href="#"><img src="./images/uploadwithborder.png" alt=""></a>
                      </figure>
                      <div class="sub-list-section-title-paragraph">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet accusantium quis animi, culpa delectus eos obcaecati sunt voluptatem dolore. Ipsa, ea. Quam aspernatur accusamus cupiditate excepturi, asperiores quas molestiae enim?.
-                        </p>
+                        <h3>Title</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.  </p>
                      </div>
                   </div>
                   <div class="sub-list-section-title clearfix">
@@ -149,7 +149,8 @@
                         <a href="#"><img src="./images/uploadwithborder.png" alt=""></a>
                      </figure>
                      <div class="sub-list-section-title-paragraph">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus beatae cumque dolorem tenetur quasi porro, corporis obcaecati nemo, laboriosam labore consequuntur nam illo maxime, recusandae adipisci earum officia explicabo unde!
+                        <h3>Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                      </div>
                   </div>
                </div>
@@ -166,8 +167,7 @@
                      <img src="./images/divider_orange_u7copy4.png" alt="">
                   </figure>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi officiis consequatur nesciunt ratione doloremque a odio facere exercitationem sequi, maiores ad, alias dicta inventore cupiditate libero architecto autem! Deserunt, pariatur.
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem, fugit eligendi. Ab harum ipsum quos quia ex. Omnis, itaque. Molestiae ratione eos qui dignissimos! Ducimus perspiciatis modi dicta in reprehenderit!
-                  </p>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.        </p>
                </div>
                <div class="standard-picture-section-image">
                   <figure>
@@ -249,7 +249,7 @@
                      <h3>Basic</h3>
                   </div>
                   <div class="price">
-                     <h1>$0</h1>
+                     <h3>$ <span>0</span> </h3>
                      <p>Free for life</p>
                   </div>
                   <div class="hover-text">
@@ -271,7 +271,7 @@
                      <h3>Basic</h3>
                   </div>
                   <div class="price">
-                     <h1>$0</h1>
+                     <h3>$<span>0</span></h3>
                      <p>Free for life</p>
                   </div>
                   <div class="hover-text">
@@ -289,12 +289,14 @@
                   </div>
                </div>
                <div class="list-all">
-                  <div class="basic">
-                     <h3>Basic</h3>
-                  </div>
-                  <div class="price">
-                     <h1>$0</h1>
-                     <p>Free for life</p>
+                  <div class="basic-price-wrapper">
+                        <div class="basic">
+                              <h3>Basic</h3>
+                           </div>
+                           <div class="price">
+                              <h3>$ <span>0</span></h3>
+                              <p>Free for life</p>
+                           </div>
                   </div>
                   <div class="hover-text">
                      <h3>OUR MOST POPULAR</h3>
@@ -331,8 +333,8 @@
             
          </section>
          <!-- 10th -->
-         <div class="customer-paragraph clearfix">
-            <div class="container ">
+         <div class="customer-paragraph ">
+            <div class="container clearfix">
                <div class="left-container">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, in dignissimos? Placeat mollitia iste, aliquam consequuntur atque asperiores dolorum debitis magni ut. Exercitationem modi quisquam ipsam enim vero debitis odio?</p>
                   <figure><img src="./images/arrow.png" alt=""></figure>
@@ -349,8 +351,8 @@
         </div>
          <!-- 11th -->
          <section>
-            <div class="container clearfix">
-               <div class="customer-container-image clearfix">
+            <div class="container ">
+               <div class="customer-container-image ">
                   <div class="image">
                      <figure><img src="./images/avatar_2.png" alt=""></figure>
                   </div>
@@ -359,7 +361,7 @@
                      <p>Manager</p>
                   </div>
                </div>
-               <div class="customer-container-image clearfix">
+               <div class="customer-container-image ">
                   <div class="image">
                      <figure><img src="./images/avatar_2.png" alt=""></figure>
                   </div>
@@ -368,7 +370,7 @@
                      <p>Freelancer</p>
                   </div>
                </div>
-               <div class="customer-container-image clearfix">
+               <div class="customer-container-image ">
                   <div class="image">
                      <figure><img src="./images/avatar_2.png" alt=""></figure>
                   </div>
