--- a/DesignAssignment/index.html
+++ b/DesignAssignment/index.html
@@ -165,10 +165,10 @@
                                     </div>
                                 </div>
                             </div>
-
                             <div class="card-name">
                                 John Wick
                             </div>
+
                         <li class="card">
                             <div class="card-image">
                                 <div class="card-hover">
@@ -267,29 +267,9 @@
                             <div class="card-name">
                                 John Wick
                             </div>
-                        </li> -->
+                        </li>
                     </ul>
                 </div>
-                <!-- <div class="heading">
-                        <h2> OUR TEAM</h2>
-                    </div>
-                    <div class="card">
-                        <div class="card-wrapper">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum tempora rerum corrupti modi facilis a inventore saepe ipsa consequatur magni, ex velit quibusdam iusto iste, beatae nemo temporibus, deserunt quidem.</p>
-                                <ul>
-                                    <li><img src="./images/facebook.png" alt=""></li>
-                                    <li><img src="./images/twitter.png" alt=""></li>
-                                    <li><img src="./images/googleplus.png" alt=""></li>
-                                    <li><img src="./images/linkedIn.png" alt=""></li>
-                                </ul> 
-                        </div> 
-                        <div class="button">
-                            <input type="button" value="Jhone Doe">
-                        </div>
-                        </div>
-                    </div> -->
-            </div>
-        </div>
         <div class="second-paragraph">
             <div class="container">
                 <div class="second-paragraph-wrapper">
@@ -401,19 +381,16 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <div class="container">
-                <div class="footer-bottom-left">
+            <div class="container ">
+                <div class="footer-bottom-left clearfix">
                     <h4>2014 Tollens</h4>
-                </div>
-                <div class="footer-bottom-right">
-                        <div class="footer-bootom-right-image">
-                                <ul>
-                                    <li><a href="#"><img src="./images/facebook.png" alt=""></a></li>
-                                    <li><a href="#"><img src="./images/twitter.png"" alt=""></a></li>
-                                    <li><a href="#"><img src="./images/googlePlus.png" alt=""></a></li>
-                                    <li><a href="#"><img src="./images/linkedIn.png" alt=""></a></li>
-                                </ul>
-                            </div> 
+                    <ul>
+                        <li><a href="#"><img src="./images/facebook.png" alt=""></a></li>
+                        <li><a href="#"><img src="./images/twitter.png" alt=""></a></li>
+                        <li><a href="#"><img src="./images/googleplus.png" alt=""></a></li>
+                        <li><a href="#"><img src="./images/twitter.png" alt=""></a></li>
+                    </ul>
+                </div>  
                 </div>
             </div>
         </div>
