--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         <tr>
             <th>JS Assignment 1:Image Slider</th>
             <th>
-                <a href="#"></a>
+                <a href="https://muksmhzrn.github.io/leapfrog/JSPROJECT/AssignmentImageSlider/"> https://muksmhzrn.github.io/leapfrog/JSPROJECT/AssignmentImageSlider/</a>
             </th>
             <th>
-                <a href="#"></a>
+                <a href="https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/AssignmentImageSlider"> https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/AssignmentImageSlider</a>
             </th>
         </tr>
         <tr>
