--- a/JSPROJECT/AssignmentImageSliderWithHoldTime/index.html
+++ b/JSPROJECT/AssignmentImageSliderWithHoldTime/index.html
@@ -20,6 +20,13 @@
       <img src="images/image5.jpg" alt="image 1">
     </div>
   </div>
+  <div class="slider-container">
+    <div class="slider-image-wrapper">
+      <img src="images/image3.jpg" alt="image 1">
+      <img src="images/image4.jpg" alt="image 1">
+      <img src="images/image5.jpg" alt="image 1">
+    </div>
+  </div>
 
   <script>
     var sliderContainers = document.getElementsByClassName('slider-container');
