--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         <tr>
             <th>JS Assignment 2 :Image Slider with hold times</th>
             <th>
-                <a href="#"></a>
+                <a href="https://muksmhzrn.github.io/leapfrog/JSPROJECT/AssignmentImageSliderWithHoldTime/"> https://muksmhzrn.github.io/leapfrog/JSPROJECT/AssignmentImageSliderWithHoldTime/</a>
             </th>
             <th>
-                <a href="#"></a>
+                <a href="https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/AssignmentImageSliderWithHoldTime"> https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/AssignmentImageSliderWithHoldTime</a>
             </th>
         </tr>
         <tr>
