--- a/JSPROJECT/AssignmentImageSliderWithHoldTime/index.html
+++ b/JSPROJECT/AssignmentImageSliderWithHoldTime/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <script src="index.js"></script>
+  <script src="script.js"></script>
+  <!-- <script src="index.js"></script> -->
   <title> </title>
 </head>
 
@@ -20,20 +21,20 @@
       <img src="images/image5.jpg" alt="image 1">
     </div>
   </div>
-  <div class="slider-container">
+  <!-- <div class="slider-container">
     <div class="slider-image-wrapper">
       <img src="images/image3.jpg" alt="image 1">
       <img src="images/image4.jpg" alt="image 1">
       <img src="images/image5.jpg" alt="image 1">
     </div>
-  </div>
+  </div> -->
 
-  <script>
+  <!-- <script>
     var sliderContainers = document.getElementsByClassName('slider-container');
     Array.prototype.forEach.call(sliderContainers, function (sliderContainer) {
       sliderContainer = new Slider(sliderContainer).init(536, 354);
     });
-  </script>
+  </script> -->
 </body>
 
 </html>
