--- a/JSPROJECT/BoxCollision/index.html
+++ b/JSPROJECT/BoxCollision/index.html
@@ -12,13 +12,9 @@
 
 <body>
   <div class="app" id="app"></div>
-  <!-- <script>
-    var appContainers = document.getElementsByClassName('app-container');
-    Array.prototype.forEach.call(appContainers, function (appContainer) {
-      appContainer = new App(appContainer).init(500, 500);
-  </script> -->
 
-  <script src="/index.js"></script>
+
+  <script src="index.js"></script>
 </body>
 
 </html>
