--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
         <tr>
             <th>JS Assignment 3 :Box Collision and Ant Smasher</th>
             <th>
-                <a href="#"></a>
+                <a href="https://muksmhzrn.github.io/leapfrog/JSPROJECT/BoxCollision/"> https://muksmhzrn.github.io/leapfrog/JSPROJECT/BoxCollision/</a>
             </th>
             <th>
-                <a href="#"></a>
+                <a href="https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/BoxCollision"> https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/BoxCollision</a>
             </th>
         </tr>
         <tr>
