--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
             border-collapse: : collapse;
             width: 100%;
         }
-        
+
         tr {
             border: 1px solid black;
             text-align: left;
             padding: 5px;
         }
-        
+
         th {
             border: 1px solid black;
             text-align: left;
@@ -40,49 +40,82 @@
         </tr>
         <tr>
             <th>Design Assignment 1 :1A-home-search.jpg</th>
-            <th><a href="https://muksmhzrn.github.io/leapfrog/DesignAssignment/">https://muksmhzrn.github.io/leapfrog/DesignAssignment/</a></th>
-            <th><a href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment">https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment</a></th>
+            <th><a
+                    href="https://muksmhzrn.github.io/leapfrog/DesignAssignment/">https://muksmhzrn.github.io/leapfrog/DesignAssignment/</a>
+            </th>
+            <th><a
+                    href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment">https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment</a>
+            </th>
         </tr>
         <tr>
             <th>Design Assignment 2 :1A-settings.jpg </th>
-            <th><a href="https://muksmhzrn.github.io/leapfrog/DesignAssignment2/">https://muksmhzrn.github.io/leapfrog/DesignAssignment2/</a></th>
-            <th><a href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment2">https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment2</a></th>
+            <th><a
+                    href="https://muksmhzrn.github.io/leapfrog/DesignAssignment2/">https://muksmhzrn.github.io/leapfrog/DesignAssignment2/</a>
+            </th>
+            <th><a
+                    href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment2">https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignment2</a>
+            </th>
         </tr>
         <tr>
             <th>Design Final Project static</th>
-            <th><a href="https://muksmhzrn.github.io/leapfrog/DesignAssignmentFinalStatic/">https://muksmhzrn.github.io/leapfrog/DesignAssignmentFinalStatic/</a></th>
-            <th><a href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignmentFinalStatic">https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignmentFinalStatic</a></th>
+            <th><a
+                    href="https://muksmhzrn.github.io/leapfrog/DesignAssignmentFinalStatic/">https://muksmhzrn.github.io/leapfrog/DesignAssignmentFinalStatic/</a>
+            </th>
+            <th><a
+                    href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignmentFinalStatic">https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignmentFinalStatic</a>
+            </th>
         </tr>
         <tr>
             <th>Design Final Project responsive</th>
-            <th><a href="https://muksmhzrn.github.io/leapfrog/DesignAssignmentFinalResponsive/">https://muksmhzrn.github.io/leapfrog/DesignAssignmentFinalResponsive/</a></th>
-            <th><a href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignmentFinalResponsive">https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignmentFinalResponsive</a></th>
+            <th><a
+                    href="https://muksmhzrn.github.io/leapfrog/DesignAssignmentFinalResponsive/">https://muksmhzrn.github.io/leapfrog/DesignAssignmentFinalResponsive/</a>
+            </th>
+            <th><a
+                    href="https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignmentFinalResponsive">https://github.com/muksmhzrn/leapfrog/tree/master/DesignAssignmentFinalResponsive</a>
+            </th>
         </tr>
         <tr>
             <th>JS Assignment 1:Image Slider</th>
             <th>
-                <a href="https://muksmhzrn.github.io/leapfrog/JSPROJECT/AssignmentImageSlider/"> https://muksmhzrn.github.io/leapfrog/JSPROJECT/AssignmentImageSlider/</a>
+                <a href="https://muksmhzrn.github.io/leapfrog/JSPROJECT/AssignmentImageSlider/">
+                    https://muksmhzrn.github.io/leapfrog/JSPROJECT/AssignmentImageSlider/</a>
             </th>
             <th>
-                <a href="https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/AssignmentImageSlider"> https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/AssignmentImageSlider</a>
+                <a href="https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/AssignmentImageSlider">
+                    https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/AssignmentImageSlider</a>
             </th>
         </tr>
         <tr>
             <th>JS Assignment 2 :Image Slider with hold times</th>
             <th>
-                <a href="https://muksmhzrn.github.io/leapfrog/JSPROJECT/AssignmentImageSliderWithHoldTime/"> https://muksmhzrn.github.io/leapfrog/JSPROJECT/AssignmentImageSliderWithHoldTime/</a>
+                <a href="https://muksmhzrn.github.io/leapfrog/JSPROJECT/AssignmentImageSliderWithHoldTime/">
+                    https://muksmhzrn.github.io/leapfrog/JSPROJECT/AssignmentImageSliderWithHoldTime/</a>
             </th>
             <th>
-                <a href="https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/AssignmentImageSliderWithHoldTime"> https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/AssignmentImageSliderWithHoldTime</a>
+                <a href="https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/AssignmentImageSliderWithHoldTime">
+                    https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/AssignmentImageSliderWithHoldTime</a>
             </th>
         </tr>
         <tr>
-            <th>JS Assignment 3 :Box Collision and Ant Smasher</th>
+            <th>JS Assignment 3.1 :Box Collision </th>
             <th>
-                <a href="https://muksmhzrn.github.io/leapfrog/JSPROJECT/BoxCollision/"> https://muksmhzrn.github.io/leapfrog/JSPROJECT/BoxCollision/</a>
+                <a href="https://muksmhzrn.github.io/leapfrog/JSPROJECT/BoxCollision/">
+                    https://muksmhzrn.github.io/leapfrog/JSPROJECT/BoxCollision/</a>
             </th>
             <th>
-                <a href="https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/BoxCollision"> https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/BoxCollision</a>
+                <a href="https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/BoxCollision">
+                    https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/BoxCollision</a>
+            </th>
+        </tr>
+        <tr>
+            <th>JS Assignment 3.2 :Box Collision and Ant Smasher </th>
+            <th>
+                <a
+                    href="https://muksmhzrn.github.io/leapfrog/JSPROJECT/BoxCollisionAntSmash/">https://muksmhzrn.github.io/leapfrog/JSPROJECT/BoxCollisionAntSmash/</a>
+            </th>
+            <th>
+                <a
+                    href="https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/BoxCollisionAntSmash">https://github.com/muksmhzrn/leapfrog/tree/master/JSPROJECT/BoxCollisionAntSmash</a>
             </th>
         </tr>
         <tr>
